objects/AssociatedField__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AssociatedObjectId__c</fullName>
        <label>AssociatedObjectId</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallReportIdFieldId__c</fullName>
        <label>CallReportIdFieldId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AssociatedField</label>
</CustomObject>